// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lsp rename > prepareRename returns range and placeholder 1`] = `
[
  "rewatch.lsp",
  "  lsp.initialized",
  "    lsp.register_watchers[watcher_count=7]",
  "      lsp.discover_package[name=@rewatch-test/app]",
  "        lsp.source_dir[dir=packages/app/src, recursive=true]",
  "      lsp.discover_package[name=@rewatch-test/library]",
  "        lsp.source_dir[dir=packages/library/src, recursive=true]",
  "      lsp.discover_package[name=rewatch-test-fixture]",
  "        lsp.source_dir[dir=src, recursive=true]",
  "  lsp.initial_build",
  "    build.load_package_sources[package=@rewatch-test/app]",
  "    build.load_package_sources[package=@rewatch-test/library]",
  "    build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "    incremental_build[module_count=4]",
  "      build.parse[dirty_modules=4]",
  "        build.parse_file[module=App, package=@rewatch-test/app]",
  "        build.parse_file[module=Library, package=@rewatch-test/library]",
  "        build.parse_file[module=Root, package=rewatch-test-fixture]",
  "        build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "      build.compile",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "          build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "  lsp.did_open[file=packages/library/src/Library.res]",
  "  lsp.prepare_rename[file=packages/library/src/Library.res, module=Library, package=@rewatch-test/library]",
  "    lsp.prepare_rename.ensure_cmt",
  "    lsp.prepare_rename.build_context",
  "    lsp.prepare_rename.analysis_binary",
]
`;

exports[`lsp rename > rename renames a value across the file 1`] = `
[
  "rewatch.lsp",
  "  lsp.initialized",
  "    lsp.register_watchers[watcher_count=7]",
  "      lsp.discover_package[name=@rewatch-test/app]",
  "        lsp.source_dir[dir=packages/app/src, recursive=true]",
  "      lsp.discover_package[name=@rewatch-test/library]",
  "        lsp.source_dir[dir=packages/library/src, recursive=true]",
  "      lsp.discover_package[name=rewatch-test-fixture]",
  "        lsp.source_dir[dir=src, recursive=true]",
  "  lsp.initial_build",
  "    build.load_package_sources[package=@rewatch-test/app]",
  "    build.load_package_sources[package=@rewatch-test/library]",
  "    build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "    incremental_build[module_count=4]",
  "      build.parse[dirty_modules=4]",
  "        build.parse_file[module=App, package=@rewatch-test/app]",
  "        build.parse_file[module=Library, package=@rewatch-test/library]",
  "        build.parse_file[module=Root, package=rewatch-test-fixture]",
  "        build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "      build.compile",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "          build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "  lsp.did_open[file=packages/library/src/Library.res]",
  "  lsp.rename[file=packages/library/src/Library.res, module=Library, package=@rewatch-test/library]",
  "    lsp.rename.ensure_cmt",
  "    lsp.rename.build_context",
  "    lsp.rename.analysis_binary",
]
`;
